tests/fixtures/ok/ParamsTypeOk2.php
<?php

namespace ParamsTypeOk2;

class A
{
	function test(int $a)
	{
	}
}


class B extends A
{
	function test(?int $a)
	{
	}
}
